# pirate-game

./: .gitattributes  CONCEPT.rst  DEVELOPER.rst  HOWTO_NEW_PROJECT.rst  LOGICS.rst  ROADMAP.rst
piratia/: CMakeLists.txt  utilities.cpp  utilities.h
piratia/Classes/: AppDelegate.cpp  ArenaScene.cpp  ArenaScene.h  FindPairGame.cpp  FindPairGame.h  FindPairGameLayer.cpp  FindPairGameLayer.h  FindPairScene.cpp  FindPairScene.h  ForgeScene.cpp  ForgeScene.h  HelloWorldScene.cpp  HelloWorldScene.h  IslandsMap.cpp  IslandsMap.h  MapScene.cpp  MapScene.h  MineScene.cpp  MineScene.h  TortugaScene.cpp  TortugaScene.h
piratia/Game/: ArmorBody.cpp  ArmorBody.h  CMakeLists.txt  CraftAbility.cpp  CraftAbility.h  FindPairGame.cpp  FindPairGame.h  Inventory.cpp  Inventory.h  Item.cpp  Item.h  Ore.cpp  Ore.h  Player.cpp  Player.h  Reciepe.cpp  Reciepe.h  Recipe.cpp  Recipe.h  Resource.cpp  Resource.h  Reward.cpp  Reward.h  Weapon.cpp  Weapon.h  structures.h
piratia/Game/tests/: CMakeLists.txt  craft.cpp  craft_test.cpp  reward_test.cpp  test_core.cpp  test_core.h
piratia/cocos2d/cmake/Modules/: CocosCompileOptions.cmake
piratia/proj.android/: settings.gradle
piratia/proj.android/app/: AndroidManifest.xml  build.gradle
piratia/proj.android/app/res/values/: strings.xml
piratia/proj.ios_mac/ios/: Info.plist
piratia/proj.ios_mac/mac/: Info.plist
piratia/proj.ios_mac/piratia.xcodeproj/: project.pbxproj
piratia/proj.win32/: piratia.sln
